hello-service/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: hello-service
spec:
  selector:
    app: hello-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
