hello-service/kubernetes/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-service
  namespace: jzangarinim-dev
spec:
  to:
    kind: Service
    name: hello-service
  port:
    targetPort: 8000
